--- a/1r.html
+++ b/1r.html
@@ -193,7 +193,7 @@ emailjs.init({
     </div>
     <div class="footer__section">
         <h2 class="footer__title">Location :</h2>
-        <p class="footer__txt">العراق - بغداد - مجمع المثنى - مجمع الزهراء التجاري</p>
+        <p class="footer__txt">العراق - بغداد - مجمع المشن - مجمع الزهراء التجاري</p>
 
         <h2 class="footer__title">Contact</h2>
         <p class="footer__txt">Phone: +9647864864044</p>
