--- a/index.html
+++ b/index.html
@@ -210,12 +210,11 @@ emailjs.init({
         <h2 class="footer__title">Sign up for your offers</h2>
         <p class="footer__txt">By subscribing to our mailing list you will always get the latest news and updates from us.</p>
 
-        <form action="https://formsubmit.co/ahmadalasade97@email.com" onsubmit="sendMail();" method="post">
+        <form action="https://formspree.io/f/xwpenjrk" method="post">
           <input id="email" type="email" class="footer__input" name="email" placeholder="Enter your email" required >
-          <input id="subject" type="text" name="subject" class="footer__input" placeholder="what do you have in minde" required>
-          <button type="submit" onclick="sendMail()"  class="stylish-button">submit</button>
+          <input id="subject" type="text" name="message" class="footer__input" placeholder="what do you have in minde" required>
+          <button type="submit"  class="stylish-button">submit</button>
         </form>
-        
 
     </div>
     <p class="copy">جميع الحقوق محفوظة لـ شركة سما الامارات © ٢٠٢٤ ,تصميم واستضافة المهندس يونس عامر</p>
