--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ emailjs.init({
         <a href="#" class="footer__link">Contact Us</a>
     </div>
     <div class="footer__section">
-        <h2 class="footer__title">Sign up for your offers</h2>
+        <h2 class="footer__title">For any complains: </h2>
         <p class="footer__txt">By subscribing to our mailing list you will always get the latest news and updates from us.</p>
 
         <form action="https://formspree.io/f/xwpenjrk" method="post">
