--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ emailjs.init({
                   
                 </p>
                 <p class="stat-caption">
-                  سنوات من الخبرة
+                  سنوات الخبرة
                 </p>
               </div>
               <div class="stat text-reverse">
