--- a/index.html
+++ b/index.html
@@ -27,7 +27,20 @@ emailjs.init({
 
 
 <script src="script.js"></script>
-  
+
+
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B4XP62ST2M"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-B4XP62ST2M');
+</script>
+
+    
 </head>
 <body>
 
