--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ emailjs.init({
 
         <form action="https://formspree.io/f/xwpenjrk" method="post">
           <input id="email" type="email" class="footer__input" name="email" placeholder="Enter your email" required >
-          <input id="subject" type="text" name="message" class="footer__input" placeholder="what do you have in minde" required>
+          <input id="subject" type="text" name="message" class="footer__input" placeholder="what do you have in mind" required>
           <button type="submit"  class="stylish-button">submit</button>
         </form>
 
